# Advent-of-Code-2021

./: CMakeLists.txt  README.md  download_input.sh  rebuild.sh
Day01/: sonarSweep.py
include/: Submarine.h
include/AoC2021/: Submarine.hpp
prototype/Day01/: sonar_sweep.py
prototype/Day02/: sonar_sweep.py
src/: Submarine.cpp  main.cpp
tests/: test_all.cpp
